--- a/public/broadcast.html
+++ b/public/broadcast.html
@@ -15,11 +15,20 @@
   </header>
 
   <main>
-    <div id="controls" class="glass-card">
-      <button id="startBroadcast">
-        <span>🎥 Start Broadcasting</span>
-      </button>
-      <button id="stopBroadcast" style="display: none;">
+    <div id="controls" class="glass-card controls">
+      <div id="sessionSetup" style="display: flex; gap: 1rem; align-items: flex-start; flex-wrap: wrap;">
+        <div style="flex: 1; min-width: 250px;">
+          <input type="text" id="sessionName" placeholder="session-name" pattern="[a-zA-Z0-9_-]+"
+            style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid var(--border-glass); background: var(--bg-secondary); color: var(--text-primary); font-size: 1rem;"
+            required />
+          <div id="sessionError" style="color: #ff6b6b; font-size: 0.85rem; margin-top: 0.25rem; display: none;"></div>
+        </div>
+        <button id="startButton" class="primary" style="margin: 0;">
+          <span>🎥 Start Broadcasting</span>
+        </button>
+      </div>
+
+      <button id="stopButton" class="secondary" style="display: none;">
         <span>⏹️ Stop Broadcasting</span>
       </button>
 
@@ -32,18 +41,47 @@
         <span>👥 Viewers: <strong id="viewerCountNumber">0</strong></span>
       </div>
 
-      <div id="networkInfo" style="display: none; margin-top: 1.5rem;">
-        <div
-          style="padding: 1rem 2rem; background: var(--bg-secondary); border-radius: 12px; border: 1px solid var(--border-glass);">
-          <div style="font-size: 0.9rem; color: var(--text-secondary); margin-bottom: 0.5rem;">Share with viewers on
-            your network:</div>
-          <div style="display: flex; align-items: center; gap: 1rem;">
-            <code id="viewerUrl"
-              style="flex: 1; padding: 0.75rem; background: var(--bg-primary); border-radius: 8px; color: var(--accent-primary); font-size: 0.95rem;"></code>
-            <button onclick="copyViewerUrl(event)" style="padding: 0.75rem 1.5rem; margin: 0;">
-              <span>📋 Copy</span>
-            </button>
-          </div>
+      <div id="networkInfo"
+        style="display: none; margin-top: 1.5rem; padding: 1.5rem; background: var(--bg-secondary); border-radius: 12px; border: 1px solid var(--border-glass);">
+        <div style="margin-bottom: 0.75rem; color: var(--text-secondary); font-size: 0.9rem;">
+          Share with viewers on your network:
+        </div>
+        <div style="display: flex; gap: 0.5rem; align-items: center;">
+          <code id="viewerUrl"
+            style="flex: 1; padding: 0.5rem; background: var(--bg-primary); border-radius: 6px; font-size: 0.9rem; overflow-x: auto; white-space: nowrap;"></code>
+          <button onclick="copyViewerUrl(event)"
+            style="padding: 0.5rem 1rem; background: var(--accent-primary); color: white; border: none; border-radius: 6px; cursor: pointer; white-space: nowrap;">
+            <span>📋 Copy</span>
+          </button>
+        </div>
+      </div>
+
+      <!-- Active Sessions Table -->
+      <div id="sessionsTable" style="margin-top: 1.5rem;">
+        <h3 style="margin-bottom: 1rem; color: var(--text-primary);">Active Broadcast Sessions</h3>
+        <div style="overflow-x: auto;">
+          <table
+            style="width: 100%; border-collapse: collapse; background: var(--bg-secondary); border-radius: 8px; overflow: hidden;">
+            <thead>
+              <tr style="background: var(--bg-primary);">
+                <th style="padding: 0.75rem; text-align: left; border-bottom: 1px solid var(--border-glass);">Session
+                  Name</th>
+                <th style="padding: 0.75rem; text-align: center; border-bottom: 1px solid var(--border-glass);">Viewers
+                </th>
+                <th style="padding: 0.75rem; text-align: left; border-bottom: 1px solid var(--border-glass);">Viewer URL
+                </th>
+                <th style="padding: 0.75rem; text-align: center; border-bottom: 1px solid var(--border-glass);">Actions
+                </th>
+              </tr>
+            </thead>
+            <tbody id="sessionsTableBody">
+              <tr>
+                <td colspan="4" style="padding: 2rem; text-align: center; color: var(--text-secondary);">
+                  No active sessions. Start broadcasting to see your session here.
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
